--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "endoapi"]
 	path = modules/endoapi
-	url = git@github.com:karlicoss/endoapi.git
+	url = https://github.com/podusowski/endoapi.git
