--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "endoapi"]
-	path = modules/endoapi
-	url = https://github.com/podusowski/endoapi.git
+[submodule "src/emfitexport/exporthelpers"]
+	path = src/endoexport/exporthelpers
+	url = https://github.com/karlicoss/exporthelpers.git
