--- a/tox.ini
+++ b/tox.ini
@@ -3,16 +3,19 @@ minversion = 3.5
 # relies on the correct version of Python installed
 envlist = py3,mypy
 
-# uncomment when we add tests
-# [testenv]
-# passenv =
-#     CI CI_*
-# commands =
-#     pip install -e .[testing]
-#     python -m pytest src
+[testenv]
+passenv =
+    CI CI_*
+commands =
+    pip install -e .[testing]
+    python -m pytest -rap src {posargs}
 
 [testenv:mypy]
 skip_install = true
 commands =
     pip install -e .[linting]
     python -m mypy src
+
+# it's kinda nice to keep tests next to the code
+[pytest]
+python_files = *.py
